# TorchCraft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PATENTS  README.md  _env.lua  client.lua  init.lua  quick_setup.sh  setup.py  starcraft_static.json  torchcraft-1.0-0.rockspec  torchcraft-1.0-2.rockspec  torchcraft-1.1-0.rockspec  torchcraft-1.1-1.rockspec  torchcraft-1.2-1.rockspec  torchcraft-1.3-0.rockspec  torchcraft-1.3-1.rockspec  torchcraft-1.3-2.rockspec  torchcraft-1.3-3.rockspec  torchcraft-1.4-0.rockspec  utils.lua
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
BWEnv/: CMakeLists.txt  FindBWAPI.cmake
BWEnv/VisualStudio/: BWEnv.sln  BWEnv.vcxproj  BWEnv.vcxproj.filters
BWEnv/ahk/: launch128SC.ahk  launch256SC.ahk  launch64SC.ahk  launchxSC.ahk
BWEnv/fbs/: base.h  flatbuffers.h  gen.sh  messages.fbs  messages_generated.h
BWEnv/include/: ZMQ_server.h  config_manager.h  controller.h  module.h  recorder.h  user_actions.h  utils.h  zmq.hpp  zmq_server.h
BWEnv/lib/: README  czmq.lib  libzmq.lib
BWEnv/src/: config_manager.cc  controller.cc  dll.cc  main.cc  module.cc  recorder.cc  user_actions.cc  utils.cc  zmq_server.cc
client/: buildtype.cpp  client.cpp  client.h  client_lua.cpp  client_lua.h  connection.cpp  connection.h  constants.cpp  constants.h  constants_lua.cpp  constants_lua.h  constants_static.cpp  enum_macros.h  lua.cpp  lua_utils.h  state.cpp  state.h  state_lua.cpp  state_lua.h  unit.cpp
cmake/: FindZMQ.cmake  FindZSTD.cmake
config/: bwapi.ini  torchcraft.ini
docker/: README.md
docker/common/: .gitignore  bwapi.mpc  bwapi.spc  quick_start.sh  regkeys
docker/cuda/: Dockerfile
docker/no-cuda/: Dockerfile
docker/openbw/: Dockerfile
docs/: README.md  openbw.md  replayer.md  repo_structure.md  starcraft_in_windows.md  starcraft_in_wine.md
docs/contributor/: code_structure.md  pr_process.md
docs/user/: bwapi_on_linux.md  installation.md  openbw.md  replayer.md  starcraft_in_windows.md  starcraft_in_wine.md  torchcraft.md
examples/: README.md  baseline_heuristics.lua  dump_replay.lua  frame_test.lua  progressbar.lua  self_play_dll.lua  simple_dll.lua  simple_exe.lua  targeting_heuristics.lua  tensor_example.lua  visual_example.lua
examples/cpp/: CMakeLists.txt  README.md  simple_dll.cpp
examples/cpp/cmake/: FindZMQ.cmake
examples/lua/: baseline_heuristics.lua  dump_replay.lua  make_video.sh  progressbar.lua  self_play_dll.lua  simple_exe.lua
examples/py/: create_kill.py  dump_rep.py  example.py  visual_example.py
fbs/: bwenv_messages.fbs  bwenv_messages_generated.h  frame.fbs  frame_generated.h  gen.sh  torchcraft.fbs  torchcraft_generated.h
fbs/flatbuffers/: base.h  flatbuffers.h
include/: client.h  constants.h  flatbufferStream.h  flatbuffer_conversions.h  frame.h  refcount.h  replayer.h  state.h  streamable_flatbuffer.h  streaming_flatbuffers.h
include/torchcraft/: buildtype.h  client.h  constants.h  frame.h  primitives.h  refcount.h  replayer.h  state.h  streaming_flatbuffers.h  unit.h
lua/: _env.lua  client_lua.cpp  client_lua.h  constants_lua.cpp  constants_lua.h  frame_lua.cpp  frame_lua.h  gamestore.cpp  gamestore.h  imgmanager.cpp  imgmanager.h  init.cpp  init.lua  lua_utils.cpp  lua_utils.h  replayer.cpp  replayer.h  replayer.lua  replayer_lua.cpp  replayer_lua.h  state_lua.cpp  state_lua.h  utils.lua
maps/: bwrep_axkn5.rep  bwrep_gwhxe.rep
maps/replays/: TL_TvZ_GG6038.rep
py/: .gitignore  README.md  pyclient.cpp  pyconstants.cpp  pyreplayer.cpp  pystate.cpp  pytorchcraft.cpp  pytorchcraft.h  requirements.txt  setup.py
py/example/: example.py
replayer/: README.md  flatbuffer_conversions.h  frame.cpp  frame.h  frame_diff.cpp  frame_diff_serialization.cpp  frame_lua.cpp  frame_lua.h  frame_serialization.cpp  gamestore.h  imgmanager.cpp  imgmanager.h  init.cpp  keyframe.cpp  keyframe_serialization.cpp  replayer.cpp  replayer.h  streamable_flatbuffer.cpp  zstdstream.h
test/: CMakeLists.txt  main_test.cpp  test.h
test/lest/: lest.hpp
test/replayer/: frame_t.cpp
