CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_CXX_STANDARD 14)

IF(ATEN)
  FIND_PACKAGE(ATen REQUIRED)
ENDIF(ATEN)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/test")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/fbs")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/fbs/flatbuffers")
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR})

IF(ATEN_FOUND)
  ADD_DEFINITIONS(-DWITH_ATEN)
ENDIF(ATEN_FOUND)

ADD_EXECUTABLE("main_test" main_test.cpp)
ADD_TEST(NAME "runOurTests" COMMAND "main_test")
