CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -ggdb")

FIND_PACKAGE(Torch)
IF(ATEN)
  FIND_PACKAGE(ATen REQUIRED)
ENDIF(ATEN)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/test")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/BWEnv/fbs")

IF(ATEN_FOUND)
  ADD_DEFINITIONS(-DWITH_ATEN)
ENDIF(ATEN_FOUND)

ADD_EXECUTABLE("main_test" main_test.cpp)
ADD_TEST(NAME "runOurTests" COMMAND "main_test")
TARGET_LINK_LIBRARIES("main_test" torchcraft)