CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")

FIND_PACKAGE(Torch)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/test")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/BWEnv/fbs")

ADD_EXECUTABLE("main_test" main_test.cpp)
ADD_TEST(NAME "runTorchCraftTests" COMMAND "main_test")
TARGET_LINK_LIBRARIES("main_test" torchcraft)