CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall")

FIND_PACKAGE(gflags REQUIRED)
ADD_SUBDIRECTORY(../.. ${CMAKE_CURRENT_BINARY_DIR}/torchcraft)

IF(ZSTD_FOUND)
    ADD_DEFINITIONS(-DWITH_ZSTD)
ENDIF()

ADD_EXECUTABLE(simple_dll simple_dll.cpp)
TARGET_LINK_LIBRARIES(simple_dll torchcraft gflags)
